--- a/wouso/games/quiz/templates/quiz/quiz.html
+++ b/wouso/games/quiz/templates/quiz/quiz.html
@@ -13,7 +13,7 @@
 	time left
 </div>
 
-<form action="{% url quiz_view quiz.id %}" method="post" id="quiz_form" class="quiz">
+<form action="{% url quiz_view quiz.id %}" method="post" id="quiz-form" class="quiz">
 	<ol>
 		{% for field in form.visible_fields %}
 		<li>
@@ -48,7 +48,7 @@
 
 <script language="javascript">
 	window.addEventListener('load', function() {
-		StartTimer('timer', 'quiz_form', {{ seconds_left }});
+		StartTimer('timer', 'quiz-form', {{ seconds_left }});
 	});
 </script>
 
