--- a/wouso/resources/templates/profile/profile.html
+++ b/wouso/resources/templates/profile/profile.html
@@ -1,216 +1,206 @@
-{% extends base_template %}
+{% extends 'interface/section_base.html'%}
 {% load artifacts %}
 {% load user %}
 {% load i18n %}
 
-{% block title %}{{ profile }}{% endblock %}
-{% block scripts %}
-    <script type="text/javascript" src="{{ basepath }}/static/js/tabs.js"></script>
-    <script type="text/javascript" src="{{ basepath }}/static/js/jquery.flot.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="{{ basepath }}/static/css/tabs.css" />
+{% block sectiontitle %}
+	{% trans 'Profile' %}
 {% endblock %}
 
-{% block content %}
+{% block sectioncontent %}
+
 <div class="profile group-{{ profile.race.name.lower }} {% if profile.group %}group-{{ profile.group.name.lower }}{% endif %}">
-    <div class="points">
-        <div class="points-big">{{ profile.points}}</div>
-        <div class="rank">{% if top.disabled %}-{% else %}{% trans 'rank' %}: {{ top.position }}{% endif %}</div>
-    </div>
+	<div class="points">
+		<div class="points-big">{{ profile.points}}</div>
+		<div class="rank">{% if top.disabled %}-{% else %}{% trans 'rank' %}: {{ top.position }}{% endif %}</div>
+	</div>
 
-    <img src="{% player_avatar profile %}" class="avatar" />
-    <h2>{{ profile }}</h2>
-    <h3>{% artifact_full profile.level %} </h3>
-    <h4>{% if profile.group %}{% trans 'Group' %}: {% player_group profile.group %}{% endif %}
-    {% if profile.race %}{% trans 'Group' %}: {% player_race profile.race %}{% endif %}
-    </h4>
-    {% if profile.magic.artifact_amounts.all %}
-        <ul class="artifacts" id="player-artifacts">
-        {% for a in profile.magic.artifact_amounts.all %}
-            <li>{% artifact a %}</li>
-        {% endfor %}
-        </ul>
-    {% endif %}
-        <ul class="artifacts" id="player-spells">
-        {% for s in profile.magic.spells.all %}
-            <li>{% if s.source.id == player.id %}{% spell_due s %}
-                {% else %}{% if profile.id == player.id %}
-                {% spell_due s %}
-                {% else %}
-                    {% spell_unknown s %}
-                {% endif %}
-                {% endif %}
-            </li>
-        {% endfor %}
-        </ul>
+	<img src="{% player_avatar profile %}" class="avatar" />
+	<h2>{{ profile }}</h2>
+	<h3>{% artifact_full profile.level %} </h3>
+	<h4>{% if profile.group %}{% trans 'Group' %}: {% player_group profile.group %}{% endif %}
+	{% if profile.race %}{% trans 'Group' %}: {% player_race profile.race %}{% endif %}
+	</h4>
+	{% if profile.magic.artifact_amounts.all %}
+		<ul class="artifacts" id="player-artifacts">
+		{% for a in profile.magic.artifact_amounts.all %}
+			<li>{% artifact a %}</li>
+		{% endfor %}
+		</ul>
+	{% endif %}
+		<ul class="artifacts" id="player-spells">
+		{% for s in profile.magic.spells.all %}
+			<li>{% if s.source.id == player.id %}{% spell_due s %}
+				{% else %}{% if profile.id == player.id %}
+				{% spell_due s %}
+				{% else %}
+					{% spell_unknown s %}
+				{% endif %}
+				{% endif %}
+			</li>
+		{% endfor %}
+		</ul>
 
-    <div class="actions">
-        {% if profile.user.id != user.id %}
-            {% comment "Use text for message label." %}
-            <a class="button button-min" href="{% url create_to profile.id %}" title="{% trans 'Send a message' %}">✉</a>
-            {% endcomment %}
-            <a class="button button-min" href="{% url create_to profile.id %}" title="{% trans 'Send a message' %}">Send message</a>
-        {% endif %}
-        {% if not config_disable_magic %}
-            <a class="button button-min" href="{% url magic_cast profile.id%}" title="{% trans 'Cast a spell on this player' %}">✤</a>
-        {% endif %}
-        {% comment "Disable profile editing" %}
-        {% if profile.user.id == user.id %}
-            <a class="button button-min" href="{% url set_profile %}" title="{% trans 'Set your profile' %}">S</a>
-        {% endif %}
-        {% endcomment %}
+	<div class="actions">
+		{% if profile.user.id != user.id %}
+			{% comment "Use text for message label." %}
+			<a class="button button-min" href="{% url create_to profile.id %}" title="{% trans 'Send a message' %}">✉</a>
+			{% endcomment %}
+			<a class="button button-min" href="{% url create_to profile.id %}" title="{% trans 'Send a message' %}">Send message</a>
+		{% endif %}
+		{% if not config_disable_magic %}
+			<a class="button button-min" href="{% url magic_cast profile.id%}" title="{% trans 'Cast a spell on this player' %}">✤</a>
+		{% endif %}
+		{% comment "Disable profile editing" %}
+		{% if profile.user.id == user.id %}
+			<a class="button button-min" href="{% url set_profile %}" title="{% trans 'Set your profile' %}">S</a>
+		{% endif %}
+		{% endcomment %}
 
-        {% comment "No challenges" %}
-        {% ifnotequal user.get_profile.id profile.id %}
-            {% if challenge_launched_recently %}
-                <span class="button">{% trans 'Challenged' %}</span>
-            {% else %}
-                <a class="button" href="{% url challenge_launch profile.id %}">{% trans 'Challenge!' %}</a>
-            {% endif %}
-        {% endifnotequal %}
-        {% endcomment %}
+		{% comment "No challenges" %}
+		{% ifnotequal user.get_profile.id profile.id %}
+			{% if challenge_launched_recently %}
+				<span class="button">{% trans 'Challenged' %}</span>
+			{% else %}
+				<a class="button" href="{% url challenge_launch profile.id %}">{% trans 'Challenge!' %}</a>
+			{% endif %}
+		{% endifnotequal %}
+		{% endcomment %}
 
-        {% comment "No special quest" %}
-        {% if specialquest_button.MATE %}
-            <span class="button">{% trans 'Special mate' %}</span>
-        {% elif specialquest_button.OTHER %}
-            <span class="button">{% trans 'Other group' %}</span>
-        {% elif specialquest_button.ALREADY_INVITED %}
-            <span class="button">{% trans 'Invited' %}</span>
-        {% elif specialquest_button.INVITE %}
-            <a href="{% url specialquest_invite profile.id %}"
-               title="{% trans 'Invite in my Special Quest group' %}">{% trans 'Invite' %}</a>
-        {% endif %}
-        {% endcomment %}
+		{% comment "No special quest" %}
+		{% if specialquest_button.MATE %}
+			<span class="button">{% trans 'Special mate' %}</span>
+		{% elif specialquest_button.OTHER %}
+			<span class="button">{% trans 'Other group' %}</span>
+		{% elif specialquest_button.ALREADY_INVITED %}
+			<span class="button">{% trans 'Invited' %}</span>
+		{% elif specialquest_button.INVITE %}
+			<a href="{% url specialquest_invite profile.id %}"
+			   title="{% trans 'Invite in my Special Quest group' %}">{% trans 'Invite' %}</a>
+		{% endif %}
+		{% endcomment %}
 
-        {% comment "No reporting" %}
-        <a class="button" href="{% url report_player profile.id%}">{% trans 'Report' %}</a>
-        {% endcomment %}
-    </div>
+		{% comment "No reporting" %}
+		<a class="button" href="{% url report_player profile.id%}">{% trans 'Report' %}</a>
+		{% endcomment %}
+	</div>
 
-    <div class="second">{% trans 'Last seen' %}:
-    {% if profile.last_seen %}
-        {{profile.last_seen}}
-    {% else %}
-        {% trans 'Never' %}
-    {% endif %}
-    </div>
+	<div class="second">
+		{% trans 'Last seen' %}:
+			{% if profile.last_seen %}
+				{{profile.last_seen}}
+			{% else %}
+				{% trans 'Never' %}
+		{% endif %}
+	</div>
 
-    {% if perms.config.change_setting %}
-    <div class="actions">
-        <span class="button-list">Staff: [{{ profile.user.username }}] </span>
-        <p class="clearer"></p>
-    </div>
-    {% endif %}
-    {% if user.is_superuser %}
-    <div class="actions">
-        {% comment "Not really useful" %}
-        <span class="button-list">Admin:</span>
-        {% endcomment %}
-        <a class="button" href="{% url challenge_stats profile.id %}">{% trans 'Challenges' %}</a>
-        <a class="button button-min" href="{% url admin:auth_user_change profile.user.id %}">✍</a>
-        <a class="button" href="{% url impersonate profile.id %}">{% trans 'Impersonate' %}</a>
-    </div>
-    {% endif %}
+	{% if perms.config.change_setting %}
+		<div class="actions">
+			<span class="button-list">Staff: [{{ profile.user.username }}] </span>
+			<p class="clearer"></p>
+		</div>
+	{% endif %}
 
-    <ul class="tabs">
-        <!--<li><a href="#tab-0">{% trans 'Description' %}</a></li>-->
-        <li><a href="#tab-1">{% trans 'Activity' %}</a></li>
-        <li><a href="#tab-2">{% trans 'Position' %}</a></li>
-        <li><a href="#tab-3">{% trans 'Points' %}</a></li>
-    </ul>
+	{% if user.is_superuser %}
+	<div class="actions">
+		{% comment "Not really useful" %}
+		<span class="button-list">Admin:</span>
+		{% endcomment %}
+		<a class="button" href="{% url challenge_stats profile.id %}">{% trans 'Challenges' %}</a>
+		<a class="button button-min" href="{% url admin:auth_user_change profile.user.id %}">✍</a>
+		<a class="button" href="{% url impersonate profile.id %}">{% trans 'Impersonate' %}</a>
+	</div>
+	{% endif %}
 
-    <div class="tab_container">
-        <!--
-        <div id="tab-0" class="tab_content">
-            <textarea id="Description" style="width: 690px; height: 200px; display:block; resize:none" readonly="readonly">{{profile.description}}</textarea>
-        </div>
-        -->
-        <div id="tab-1" class="tab_content">
-        {% include 'activity/stream.html' %}
 
-        {% if activity.has_previous %}
-        <a href="{% url player_profile id=profile.id page=activity.previous_page_number %}#tab-1"> Newer </a>
-        {% endif %}
+	<div id="tab-1" class="tab_content">
+		{% include 'activity/stream.html' %}
 
-        {% if activity.has_next %}
-        <a href="{% url player_profile id=profile.id page=activity.next_page_number %}#tab-1"> Older </a>
-        {% endif %}
-        </div>
+		{% if activity.has_previous %}
+			<a href="{% url player_profile id=profile.id page=activity.previous_page_number %}#tab-1"> Newer </a>
+		{% endif %}
 
-        <div id="tab-2" class="tab_content">
-            <div class="subgroups">
-                <h3>{% trans 'Rank' %}</h3>
-                <p>Global: <span class="points">{{ top.position }}</span></p>
-                {% for g in top.topgroups %}
-                    <p>{{ g }}: <span class="points">{{ g.position }}</span></p>
-                {% endfor %}
-                <div id="legend"></div>
-            </div>
-            <div id="graf1" class="graf placeholder"></div>
-            <script id="source" language="javascript" type="text/javascript">
-            <!-- using flot to draw evolution -->
-            $(function () {
-                var d1 = [[null, 12],{% for p in top.week_evolution %}[{{p.0}},{{p.1}}],{% endfor %}[7, null]];
-                {% for g in top.topgroups %}
-                var dg{{g.id}} = [{% for p in g.week_evolution %}[{{p.0}},{{p.1}}],{% endfor %}];
-                {% endfor %}
-                var options = { lines: { show: true }, points: { show: true },
-                    xaxis: {
-                        ticks: [[1,1],[2,2],[3,3],[4,4],[5,5],[6,6],[7,7]]
-                        },
-                    yaxis: {
-                        transform: function (v) { return -v; },
-                        inverseTransform: function (v) { return -v; },
-                      },
-                    legend: {
-                        container: $('#legend'),
-                    },
-                };
-                var setup = [
-                    {label: "{% trans 'Position evolution' %}", color: "green", data: d1},
-                    {% for g in top.topgroups %}
-                    {label: "{{ g }}", data: dg{{g.id}}},
-                    {% endfor %}
-                ];
-                $("#tab-2").bind('custom', function() {
-                    $.plot($("#graf1"), setup, options);
-                    $('#tab-2').unbind('custom');
-                });
-            });
-            </script>
-        </div>
+		{% if activity.has_next %}
+			<a href="{% url player_profile id=profile.id page=activity.next_page_number %}#tab-1"> Older </a>
+		{% endif %}
+	</div>
 
-        <div id="tab-3" class="tab_content">
-            <div class="subgroups">
-            {% for source,coins in scoring.iteritems %}
-                <h3>{% trans source %}</h3>
-                    {% for coin, value in coins.iteritems %}
-                        <p>{% coin_amount value coin %}</p>
-                    {% endfor %}
-            {% empty %}
-                {% trans 'No points registered for this player.' %}
-            {% endfor %}
-            <p><a class="goto" href="{% url player_points_history profile.id %}">{% trans 'History' %}</a></p>
-            </div>
-            <div id="graf2" class="graf placeholder"></div>
-            <script id="source2" language="javascript" type="text/javascript">
-            <!-- using flot to draw evolution -->
-            $(function () {
-                var d1 = [[null, 760],{% for p in top.week_points_evolution %}[{{p.0}},{{p.1}}],{% endfor %}[7, null]];
-                var options = { lines: { show: true }, points: { show: true },
-                    xaxis: {
-                        ticks: [[1,1],[2,2],[3,3],[4,4],[5,5],[6,6],[7,7]]
-                        },
-                };
-                $("#tab-3").bind('custom', function() {
-                    $.plot($("#graf2"), [{ label: "{% trans 'Weekly points evolution' %}", color: "blue", data: d1}], options);
-                    $('#tab-3').unbind('custom');
-                });
-            });
-            </script>
-        </div>
-    </div>
+		<!-- Not used for now -->
+		<!--
+	<div id="tab-2" class="tab_content">
+		<div class="subgroups">
+			<h3>{% trans 'Rank' %}</h3>
+			<p>Global: <span class="points">{{ top.position }}</span></p>
+			{% for g in top.topgroups %}
+				<p>{{ g }}: <span class="points">{{ g.position }}</span></p>
+			{% endfor %}
+			<div id="legend"></div>
+		</div>
+
+		<script id="source" language="javascript" type="text/javascript">
+			// using flot to draw evolution
+			$(function () {
+				var d1 = [[null, 12],{% for p in top.week_evolution %}[{{p.0}},{{p.1}}],{% endfor %}[7, null]];
+				{% for g in top.topgroups %}
+				var dg{{g.id}} = [{% for p in g.week_evolution %}[{{p.0}},{{p.1}}],{% endfor %}];
+				{% endfor %}
+				var options = { lines: { show: true }, points: { show: true },
+					xaxis: {
+						ticks: [[1,1],[2,2],[3,3],[4,4],[5,5],[6,6],[7,7]]
+						},
+					yaxis: {
+						transform: function (v) { return -v; },
+						inverseTransform: function (v) { return -v; },
+					  },
+					legend: {
+						container: $('#legend'),
+					},
+				};
+				var setup = [
+					{label: "{% trans 'Position evolution' %}", color: "green", data: d1},
+					{% for g in top.topgroups %}
+					{label: "{{ g }}", data: dg{{g.id}}},
+					{% endfor %}
+				];
+				$("#tab-2").bind('custom', function() {
+					$.plot($("#graf1"), setup, options);
+					$('#tab-2').unbind('custom');
+				});
+			});
+		</script>
+	</div>
+	-->
+
+	<!--
+	<div class="subgroups">
+		{% for source,coins in scoring.iteritems %}
+			<h3>{% trans source %}</h3>
+				{% for coin, value in coins.iteritems %}
+					<p>{% coin_amount value coin %}</p>
+				{% endfor %}
+		{% empty %}
+			{% trans 'No points registered for this player.' %}
+		{% endfor %}
+		<p><a class="goto" href="{% url player_points_history profile.id %}">{% trans 'History' %}</a></p>
+	</div>
+	-->
+
+	<!-- <script id="source2" language="javascript" type="text/javascript">
+		// using flot to draw evolution
+		$(function () {
+			var d1 = [[null, 760],{% for p in top.week_points_evolution %}[{{p.0}},{{p.1}}],{% endfor %}[7, null]];
+			var options = { lines: { show: true }, points: { show: true },
+				xaxis: {
+					ticks: [[1,1],[2,2],[3,3],[4,4],[5,5],[6,6],[7,7]]
+					},
+			};
+			$("#tab-3").bind('custom', function() {
+				$.plot($("#graf2"), [{ label: "{% trans 'Weekly points evolution' %}", color: "blue", data: d1}], options);
+				$('#tab-3').unbind('custom');
+			});
+		});
+	</script> -->
 </div>
-<script language="javascript" type="text/javascript">
-</script>
+
 {% endblock %}
+
